--- a/index.html
+++ b/index.html
@@ -169,18 +169,18 @@
         }
 
         .profile-photo-container {
-            margin: 0 auto 2rem;
+            margin: 0 auto 1rem;
             width: 200px;
             height: 200px;
             position: relative;
         }
 
         .profile-photo {
-            width: 100%;
-            height: 100%;
+            width: 130%;
+            height: 130%;
             border-radius: 70%;
             object-fit: cover;
-            border: 3px solid transparent;
+            border: 5px solid transparent;
             background: var(--gradient-orange);
             box-shadow: var(--shadow-lg), 0 0 30px rgba(255, 107, 53, 0.3);
             transition: transform 0.3s ease;
@@ -829,7 +829,7 @@
             </div>
             <h1 data-aos="fade-up">Geronimo Nicomedes</h1>
             <p class="subtitle" data-aos="fade-up" data-aos-delay="100">
-                Graphic Designer | Virtual Assistant | Social Media Manager | Aspiring Automation Specialist
+                Graphic Designer | Virtual Assistant | Social Media Manager | Aspiring AI Automation Specialist
             </p>
             <div class="cta-buttons" data-aos="fade-up" data-aos-delay="200">
                 <a href="#contact" class="btn btn-primary">
