--- a/index.html
+++ b/index.html
@@ -827,9 +827,9 @@
         <div class="container">
             <!-- 🎯 PROFILE PHOTO - Place your profile.png file in the root directory -->
             <div class="profile-photo-container" data-aos="zoom-in">
-                <img src="./profile.png" alt="Geronimo 'Jerome' Nicomedes" class="profile-photo">
+                <img src="./profile.png" alt="Geronimo Nicomedes" class="profile-photo">
             </div>
-            <h1 data-aos="fade-up">Geronimo Nicomedes</h1>
+            <h1 data-aos="fade-up">Geronimo "Jerome" Nicomedes</h1>
             <p class="subtitle" data-aos="fade-up" data-aos-delay="100">
                 Graphic Designer | Virtual Assistant | Social Media Manager | Aspiring AI Automation Specialist
             </p>
