--- a/index.html
+++ b/index.html
@@ -1172,11 +1172,11 @@
     </section>
 
     <!-- GALLERY SECTION TEMPORARILY HIDDEN
-<!-- Gallery Section -->
+<!-- Gallery Section --
     <section id="gallery" class="container">
         <h2 data-aos="fade-up">Work Gallery</h2>
         <div class="gallery-grid">
-            <!-- 🔴 PLACEHOLDER: Replace these 6 placeholder icons with your actual work images -->
+            <!-- 🔴 PLACEHOLDER: Replace these 6 placeholder icons with your actual work images --
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
                 <i class="fas fa-image gallery-placeholder"></i>
             </div>
@@ -1196,12 +1196,11 @@
                 <i class="fas fa-image gallery-placeholder"></i>
             </div>
         </div>
-    </section>
-    -->
-
+    </section> -->
+    
     <!-- Contact Section -->
     
---><section id="contact" class="container">
+    <section id="contact" class="container">
         <h2 data-aos="fade-up">Get In Touch</h2>
         <div class="contact-grid">
             <div class="contact-card" data-aos="fade-up" data-aos-delay="100">
